<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonitorApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_memtotal">Memtotal:</string>
    <string name="label_memunit"> KB</string>
    <string name="label_memfree">MemFree:</string>
    <string name="label_buffers">Buffers:</string>
    <string name="action_start_record">Start record</string>
    <string name="action_stop_record">Stop record</string>
    <string name="action_start_gc">Start GC</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="label_cached">Cached:</string>
    <string name="label_active">Active:</string>
    <string name="label_inactive">Inactive:</string>
    <string name="label_dirty">Dirty:</string>
    <string name="label_vmalloctotal">VmallocTotal:</string>
    <string name="label_vmallocused">VmallocUsed:</string>
    <string name="label_vmallocchunk">VmallocChunk:</string>
    <string name="dialog_title">About</string>
    <string name="dialog_message">This is app that show the memory information.</string>
    <string name="label_cpu_work_rate">CPU total usage:</string>
    <string name="label_cpuunit">%</string>
    <string name="label_ok_btn">"Ok"</string>
    <string name="alertdlg_title_info">Info:</string>

</resources>
