<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="com.adam.app.monitorapp.MainActivity" >

    <LinearLayout
        android:id="@+id/meminfo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#181818"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textColor="#FFFFFFFF"
                android:layout_weight="1"
                android:text="@string/label_memtotal" />

            <TextView
                android:id="@+id/MemTotalNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#FFFFFFFF"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFFFF"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textColor="#ff00ff00"
                android:layout_weight="1"
                android:text="@string/label_memfree" />

            <TextView
                android:id="@+id/MemFreeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textColor="#ff00ff00"
                android:layout_weight="1"
                android:text="@string/label_buffers" />

            <TextView
                android:id="@+id/MemBufferNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textColor="#ff00ff00"
                android:layout_weight="1"
                android:text="@string/label_cached" />

            <TextView
                android:id="@+id/MemCachedNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textColor="#ff00ff00"
                android:layout_weight="1"
                android:text="@string/label_active" />

            <TextView
                android:id="@+id/MemActiveNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:layout_marginStart="15sp"
                android:layout_weight="1"
                android:text="@string/label_inactive" />

            <TextView
                android:id="@+id/MemInactiveNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:layout_marginStart="15sp"
                android:layout_weight="1"
                android:text="@string/label_dirty" />

            <TextView
                android:id="@+id/MemDirtyNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:layout_marginStart="15sp"
                android:layout_weight="1"
                android:text="@string/label_vmalloctotal" />

            <TextView
                android:id="@+id/MemVmallocTotalNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:layout_marginStart="15sp"
                android:layout_weight="1"
                android:text="@string/label_vmallocused" />

            <TextView
                android:id="@+id/MemVmallocUsedNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:layout_marginStart="15sp"
                android:layout_weight="1"
                android:text="@string/label_vmallocchunk" />

            <TextView
                android:id="@+id/MemVmallocChunkNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="#ff00ff00"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff00ff00"
                android:text="@string/label_memunit" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.96"
        android:background="#181818"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textColor="#FFFFFFFF"
                android:layout_weight="1"
                android:text="@string/label_cpu_work_rate" />

            <TextView
                android:id="@+id/CpuWorkNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="#FFFFFFFF"
                android:gravity="start"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFFFF"
                android:text="@string/label_cpuunit" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:onClick="onStartRecord"
                    android:text="@string/action_start_record" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_stop"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:onClick="onStopRecord"
                    android:text="@string/action_stop_record" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_start_gc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onGC"
                    android:text="@string/action_start_gc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onExit"
                    android:text="@string/action_exit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onAbout"
                    android:text="@string/action_about" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>